# hymlx

./: .gitignore  CHANGELOG.md  DEPLOYMENT_PATHWAYS.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  pyproject.toml
docs/: BIOREGIONAL_CURRENCY_PROTOCOL.md  JAX_ECOSYSTEM_TRIADIC_ANALYSIS.md
src/hymlx/: __init__.py  arch.hy  cli.py  cli_hy.hy  graphs.hy  jax_bridge.hy  nn.py  splitmix.py  telemetry.hy  transforms.py  transforms_ico.hy
src/hymlx/mojo/: py2hy.mojo
tests/: test_arch.py  test_arch_parity.py  test_attention.py  test_benchmark.hy  test_benchmark.py  test_graphs.hy  test_hyjax_parity.py  test_jax_bridge.hy  test_nn.py  test_splitmix.py  test_telemetry.py  test_transforms.py
